[project]
name = "latexlint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "fitz>=0.0.1.dev2",
    "pillow>=12.2.0",
    "pymupdf>=1.26.4",
    "selenium>=4.35.0",
    "types-requests>=2.32.4.20250913",
]
